<resources>
    <string name="app_name">Aspire Challenge</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="no_internet_connection">No Internet Connection!!</string>
    <string name="action_no_en">No</string>
    <string name="action_ok_en">OK</string>
    <string name="action_cancel_en">Cancel</string>
    <string name="action_yes_en">Yes</string>

    <!--Error-->
    <string name="err_msg_name_empty">Please enter full name</string>
    <string name="err_msg_less_than_character">Please enter at least %s characters</string>
    <string name="err_msg_email_empty">Please enter email</string>
    <string name="err_msg_please_enter_email_correct">Please enter a valid e-mail address</string>
    <string name="err_msg_password_empty">Please enter password</string>
    <string name="err_msg_please_enter_less_than_one_character_and_one_number">Please create password with 8 or more characters including single-byte alphanumeric characters, not including symbols</string>
    <string name="err_msg_confirm_password_empty">Please enter confirm password</string>
    <string name="err_msg_confirm_password_incorrect">Password does not match confirmation password</string>
    <string name="err_msg_please_select_pdf_file">Please select PDF file</string>
    <string name="err_msg_please_add_identity">Please add Identity</string>
    <string name="err_msg_please_add_image_selfie">Please add image selfie list</string>

    <!--Message-->
    <string name="msg_attach_file_success">Attachment Bank Statement Successfully</string>
    <string name="msg_verify_info_success">Verify Info Successfully</string>
    <string name="msg_welcome">Welcome to Aspire</string>

    <!--Title-->
    <string name="title_register">Register</string>
    <string name="title_profile">Profile</string>
    <string name="title_verify_info">Verify Information</string>
    <string name="title_home">Home</string>


    <!--Label-->
    <string name="label_register">Register</string>
    <string name="label_name">Full name</string>
    <string name="label_email">Email</string>
    <string name="label_address">Address</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_attach_bank_statement">Attach Bank Statement</string>
    <string name="label_submit_bank_statement">Submit Bank Statement</string>
    <string name="label_img_dsc"/>
    <string name="label_attach_identity">Attach Identity</string>
    <string name="label_selfies">Attach Selfiles</string>
    <string name="label_submit_identity">Submit Info</string>

</resources>
